--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>fish.focus.uvms.maven</groupId>
         <artifactId>uvms-pom</artifactId>
-        <version>1.18</version>
+        <version>1.21</version>
     </parent>
 
     <groupId>eu.europa.ec.fisheries.uvms.config</groupId>
@@ -24,11 +24,9 @@
         <sl4j.version>1.7.25</sl4j.version>
         <logback.version>1.2.3</logback.version>
         <logback.core.version>1.2.3</logback.core.version>
-
-        <usm4uvms.version>4.0.11</usm4uvms.version>
+        <usm4uvms.version>4.0.13-SNAPSHOT</usm4uvms.version>
         <audit.model.version>4.0.10</audit.model.version>
         <uvms.common.version>3.0.28</uvms.common.version>
-
         <project.scm.id>github</project.scm.id>
     </properties>
     <dependencies>
@@ -42,19 +40,19 @@
             <dependency>
                 <groupId>fish.focus.uvms.maven</groupId>
                 <artifactId>uvms-pom-gis-deps</artifactId>
-                <version>1.18</version>
+                <version>1.21</version>
                 <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>fish.focus.uvms.maven</groupId>
                 <artifactId>uvms-pom-logging-deps</artifactId>
-                <version>1.18</version>
+                <version>1.21</version>
                 <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>fish.focus.uvms.maven</groupId>
                 <artifactId>uvms-pom-monitoring-deps</artifactId>
-                <version>1.18</version>
+                <version>1.21</version>
                 <type>pom</type>
             </dependency>
             <dependency>
@@ -66,7 +64,7 @@
             <dependency>
                 <groupId>fish.focus.uvms.maven</groupId>
                 <artifactId>uvms-pom-arquillian-deps</artifactId>
-                <version>1.18</version>
+                <version>1.21</version>
                 <type>pom</type>
             </dependency>
         </dependencies>
