--- a/LIQUIBASE/pom.xml
+++ b/LIQUIBASE/pom.xml
@@ -14,6 +14,7 @@
         <project.scm.id>github</project.scm.id>
         <repository.id>${project.distributionManagement.snapshotRepository.id}</repository.id>
         <repository.url>${project.distributionManagement.snapshotRepository.url}</repository.url>
+		<docker.liquibase.changeLogFile>LIQUIBASE/changelog/db-changelog-master.xml</docker.liquibase.changeLogFile>
     </properties>
 
     <distributionManagement>
@@ -38,6 +39,13 @@
     </repositories>
 	
     <profiles>
+		<profile>
+			<id>docker</id>
+			<properties>
+				<docker.liquibase.db.user>config</docker.liquibase.db.user>
+				<docker.liquibase.db.passwd>config</docker.liquibase.db.passwd>
+			</properties>
+		</profile>
         <profile>
             <id>postgres</id>
             <activation>
