--- a/pom.xml
+++ b/pom.xml
@@ -30,13 +30,14 @@
         <usm4uvms.version>4.0.13</usm4uvms.version>
         <audit.model.version>4.0.10</audit.model.version>
         <uvms.common.version>3.0.29</uvms.common.version>
+        <javaee.version>8.0</javaee.version>
         <project.scm.id>github</project.scm.id>
     </properties>
     <dependencies>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
-            <version>8.0</version>
+            <version>${javaee.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
