--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,6 @@
         <docker.liquibase.db.passwd>config</docker.liquibase.db.passwd>
         <mockito.version>1.10.16</mockito.version>
         <junit.version>4.12</junit.version>
-        <javaee.version>7.0</javaee.version>
         <swagger.version>1.3.1</swagger.version>
         <sl4j.version>1.7.25</sl4j.version>
         <logback.version>1.2.3</logback.version>
@@ -32,6 +31,8 @@
 
         <uvms.common.version>3.0.29</uvms.common.version>
         <usm4uvms.version>4.0.14-W14-J8</usm4uvms.version>
+
+        <hibernate.version>5.1.9.Final</hibernate.version>
 
         <project.scm.id>github</project.scm.id>
     </properties>
@@ -50,6 +51,26 @@
                 <artifactId>uvms-pom-gis-deps</artifactId>
                 <version>1.21</version>
                 <type>pom</type>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.hibernate</groupId>
+                        <artifactId>hibernate-core</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.hibernate</groupId>
+                        <artifactId>hibernate-entitymanager</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>${hibernate.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-entitymanager</artifactId>
+                <version>${hibernate.version}</version>
             </dependency>
             <dependency>
                 <groupId>fish.focus.uvms.maven</groupId>
