--- a/LIQUIBASE/pom.xml
+++ b/LIQUIBASE/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.config</groupId>
         <artifactId>config</artifactId>
-        <version>4.0.15</version>
+        <version>4.0.16-SNAPSHOT</version>
     </parent>
     
     <artifactId>liquibase</artifactId>
