--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.config</groupId>
         <artifactId>config</artifactId>
-        <version>4.0.15</version>
+        <version>4.0.16-SNAPSHOT</version>
     </parent>
 
     <dependencies>
