--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,12 @@
     <description>Maven projekt-archetype for UnionVms modules</description>
 
     <properties>
-        <config.api.check.against.version>4.0.0</config.api.check.against.version>
-        <docker.dev.version>3.22.0</docker.dev.version>
+        <installAtEnd>false</installAtEnd>
+
+        <docker.liquibase.changeLogFile>LIQUIBASE/changelog/db-changelog-master.xml</docker.liquibase.changeLogFile>
+        <docker.liquibase.db.user>config</docker.liquibase.db.user>
+        <docker.liquibase.db.passwd>config</docker.liquibase.db.passwd>
+        <docker.dev.version>3.37.1.w17</docker.dev.version>
         <mockito.version>1.10.16</mockito.version>
         <junit.version>4.12</junit.version>
         <javaee.version>7.0</javaee.version>
