--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -64,6 +64,18 @@
             <artifactId>uvms-commons-message</artifactId>
         	<version>${uvms.common.version}</version>
         </dependency>
+        <dependency>
+            <groupId>fish.focus.uvms.maven</groupId>
+            <artifactId>uvms-pom-arquillian-deps</artifactId>
+            <type>pom</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.jaxrs</groupId>
+            <artifactId>jackson-jaxrs-json-provider</artifactId>
+            <version>2.9.5</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
