--- a/pom.xml
+++ b/pom.xml
@@ -1,177 +1,175 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>fish.focus.uvms.maven</groupId>
-        <artifactId>uvms-pom</artifactId>
-        <version>1.21</version>
-    </parent>
+  <parent>
+    <groupId>fish.focus.uvms.maven</groupId>
+    <artifactId>uvms-pom</artifactId>
+    <version>1.21</version>
+  </parent>
 
-    <groupId>eu.europa.ec.fisheries.uvms.config</groupId>
-    <artifactId>config</artifactId>
-    <version>4.0.13-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <description>Maven projekt-archetype for UnionVms modules</description>
+  <groupId>eu.europa.ec.fisheries.uvms.config</groupId>
+  <artifactId>config</artifactId>
+  <version>4.0.14-SNAPSHOT</version>
+  <packaging>pom</packaging>
+  <description>Maven projekt-archetype for UnionVms modules</description>
 
-    <properties>
-        <config.api.check.against.version>4.0.0</config.api.check.against.version>
-        <docker.dev.version>3.29.2.w14</docker.dev.version>
-        <docker.liquibase.changeLogFile>LIQUIBASE/changelog/db-changelog-master.xml</docker.liquibase.changeLogFile>
-        <docker.liquibase.db.user>config</docker.liquibase.db.user>
-        <docker.liquibase.db.passwd>config</docker.liquibase.db.passwd>
-        <mockito.version>1.10.16</mockito.version>
-        <junit.version>4.12</junit.version>
-        <swagger.version>1.3.1</swagger.version>
-        <sl4j.version>1.7.25</sl4j.version>
-        <logback.version>1.2.3</logback.version>
-        <logback.core.version>1.2.3</logback.core.version>
-        <audit.model.version>4.0.10</audit.model.version>
-        <javaee.version>8.0</javaee.version>
+  <properties>
+    <config.api.check.against.version>4.0.15</config.api.check.against.version>
+    <docker.dev.version>3.29.2.w14</docker.dev.version>
+    <docker.liquibase.changeLogFile>LIQUIBASE/changelog/db-changelog-master.xml</docker.liquibase.changeLogFile>
+    <docker.liquibase.db.user>config</docker.liquibase.db.user>
+    <docker.liquibase.db.passwd>config</docker.liquibase.db.passwd>
+    <mockito.version>1.10.16</mockito.version>
+    <junit.version>4.12</junit.version>
+    <swagger.version>1.3.1</swagger.version>
+    <sl4j.version>1.7.25</sl4j.version>
+    <logback.version>1.2.3</logback.version>
+    <logback.core.version>1.2.3</logback.core.version>
+    <audit.model.version>4.0.10</audit.model.version>
+    <javaee.version>8.0</javaee.version>
+    <uvms.common.version>3.4-SNAPSHOT</uvms.common.version>
+    <usm4uvms.version>4.0.15.1-SNAPSHOT</usm4uvms.version>
+    <hibernate.version>5.1.9.Final</hibernate.version>
 
-        <uvms.common.version>3.3-W14J8</uvms.common.version>
-        <usm4uvms.version>4.0.14-W14-J8</usm4uvms.version>
-
-        <hibernate.version>5.1.9.Final</hibernate.version>
-
-        <project.scm.id>github</project.scm.id>
-    </properties>
+    <project.scm.id>github</project.scm.id>
+  </properties>
+  <dependencies>
+    <dependency>
+      <groupId>javax</groupId>
+      <artifactId>javaee-api</artifactId>
+      <version>${javaee.version}</version>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
+  <dependencyManagement>
     <dependencies>
-        <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-            <version>${javaee.version}</version>
-            <scope>provided</scope>
-        </dependency>
+      <dependency>
+        <groupId>fish.focus.uvms.maven</groupId>
+        <artifactId>uvms-pom-gis-deps</artifactId>
+        <version>1.21</version>
+        <type>pom</type>
+        <exclusions>
+          <exclusion>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>${hibernate.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-entitymanager</artifactId>
+        <version>${hibernate.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>fish.focus.uvms.maven</groupId>
+        <artifactId>uvms-pom-logging-deps</artifactId>
+        <version>1.21</version>
+        <type>pom</type>
+      </dependency>
+      <dependency>
+        <groupId>fish.focus.uvms.maven</groupId>
+        <artifactId>uvms-pom-monitoring-deps</artifactId>
+        <version>1.21</version>
+        <type>pom</type>
+      </dependency>
+      <dependency>
+        <groupId>fish.focus.uvms.maven</groupId>
+        <artifactId>uvms-pom-test-deps</artifactId>
+        <version>1.21</version>
+        <type>pom</type>
+      </dependency>
+      <dependency>
+        <groupId>fish.focus.uvms.maven</groupId>
+        <artifactId>uvms-pom-arquillian-deps</artifactId>
+        <version>1.21</version>
+        <type>pom</type>
+      </dependency>
     </dependencies>
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>fish.focus.uvms.maven</groupId>
-                <artifactId>uvms-pom-gis-deps</artifactId>
-                <version>1.21</version>
-                <type>pom</type>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.hibernate</groupId>
-                        <artifactId>hibernate-core</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.hibernate</groupId>
-                        <artifactId>hibernate-entitymanager</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>org.hibernate</groupId>
-                <artifactId>hibernate-core</artifactId>
-                <version>${hibernate.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.hibernate</groupId>
-                <artifactId>hibernate-entitymanager</artifactId>
-                <version>${hibernate.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>fish.focus.uvms.maven</groupId>
-                <artifactId>uvms-pom-logging-deps</artifactId>
-                <version>1.21</version>
-                <type>pom</type>
-            </dependency>
-            <dependency>
-                <groupId>fish.focus.uvms.maven</groupId>
-                <artifactId>uvms-pom-monitoring-deps</artifactId>
-                <version>1.21</version>
-                <type>pom</type>
-            </dependency>
-            <dependency>
-                <groupId>fish.focus.uvms.maven</groupId>
-                <artifactId>uvms-pom-test-deps</artifactId>
-                <version>1.21</version>
-                <type>pom</type>
-            </dependency>
-            <dependency>
-                <groupId>fish.focus.uvms.maven</groupId>
-                <artifactId>uvms-pom-arquillian-deps</artifactId>
-                <version>1.21</version>
-                <type>pom</type>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+  </dependencyManagement>
 
-    <repositories>
-        <repository>
-            <id>focus-repo</id>
-            <name>Focus nexus repository</name>
-            <url>http://nexus.focus.fish/nexus/</url>
-        </repository>
-    </repositories>
+  <repositories>
+    <repository>
+      <id>focus-repo</id>
+      <name>Focus nexus repository</name>
+      <url>http://nexus.focus.fish/nexus/</url>
+    </repository>
+  </repositories>
 
-    <distributionManagement>
-        <repository>
-            <id>focus-releases</id>
-            <name>UnionVms Repository</name>
-            <url>http://nexus.focus.fish/nexus/content/repositories/releases/</url>
-        </repository>
-        <snapshotRepository>
-            <id>focus-snapshots</id>
-            <name>UnionVms Snapshot Repository</name>
-            <url>http://nexus.focus.fish/nexus/content/repositories/snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
+  <distributionManagement>
+    <repository>
+      <id>focus-releases</id>
+      <name>UnionVms Repository</name>
+      <url>http://nexus.focus.fish/nexus/content/repositories/releases/</url>
+    </repository>
+    <snapshotRepository>
+      <id>focus-snapshots</id>
+      <name>UnionVms Snapshot Repository</name>
+      <url>http://nexus.focus.fish/nexus/content/repositories/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
 
-    <scm>
-        <connection>scm:git:https://github.com/UnionVMS/UVMS-ConfigModule-APP.git</connection>
-        <tag>HEAD</tag>
-    </scm>
+  <scm>
+    <connection>scm:git:https://github.com/UnionVMS/UVMS-ConfigModule-APP.git</connection>
+    <tag>HEAD</tag>
+  </scm>
 
-    <profiles>
-        <!-- enforce-jdk-version -->
-        <profile>
-            <id>enforce-jdk-version</id>
-            <activation>
-                <!-- To disable profile, define property -Dfocus-pom.enforce.jdk.version.disabled=true -->
-                <property>
-                    <name>!focus-pom.enforce.jdk.version.disabled</name>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-enforcer-plugin</artifactId>
-                        <inherited>false</inherited>
-                        <executions>
-                            <execution>
-                                <id>enforce-jdk-version</id>
-                                <goals>
-                                    <goal>enforce</goal>
-                                </goals>
-                                <configuration>
-                                    <rules>
-                                        <enforceBytecodeVersion>
-                                            <maxJdkVersion>${focus-pom.java.version}</maxJdkVersion>
-                                            <!-- NOTE: xstream do contain support for multiple jdk:s -->
-                                            <excludes>
-                                                <exclude>com.thoughtworks.xstream:xstream</exclude>
-                                            </excludes>
-                                        </enforceBytecodeVersion>
-                                    </rules>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+  <profiles>
+    <!-- enforce-jdk-version -->
+    <profile>
+      <id>enforce-jdk-version</id>
+      <activation>
+        <!-- To disable profile, define property -Dfocus-pom.enforce.jdk.version.disabled=true -->
+        <property>
+          <name>!focus-pom.enforce.jdk.version.disabled</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-enforcer-plugin</artifactId>
+            <inherited>false</inherited>
+            <executions>
+              <execution>
+                <id>enforce-jdk-version</id>
+                <goals>
+                  <goal>enforce</goal>
+                </goals>
+                <configuration>
+                  <rules>
+                    <enforceBytecodeVersion>
+                      <maxJdkVersion>${focus-pom.java.version}</maxJdkVersion>
+                      <!-- NOTE: xstream do contain support for multiple jdk:s -->
+                      <excludes>
+                        <exclude>com.thoughtworks.xstream:xstream</exclude>
+                      </excludes>
+                    </enforceBytecodeVersion>
+                  </rules>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
-    <modules>
-        <module>model</module>
-        <module>LIQUIBASE</module>
-        <module>domain</module>
-        <module>rest</module>
-        <module>service</module>
-        <module>message</module>
-        <module>module</module>
-    </modules>
+  <modules>
+    <module>model</module>
+    <module>LIQUIBASE</module>
+    <module>domain</module>
+    <module>rest</module>
+    <module>service</module>
+    <module>message</module>
+    <module>module</module>
+  </modules>
 </project>
