--- a/LIQUIBASE/pom.xml
+++ b/LIQUIBASE/pom.xml
@@ -9,6 +9,7 @@
     
     <artifactId>liquibase</artifactId>
     <name>liquibase</name>
+    <packaging>pom</packaging>
 
     <properties>
         <project.scm.id>github</project.scm.id>
