--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <logback.core.version>1.2.3</logback.core.version>
     <audit.model.version>4.0.10</audit.model.version>
     <javaee.version>8.0</javaee.version>
-    <uvms.common.version>${uvms.commonsLibrary.version}</uvms.common.version>
+    <uvms.commons.version>${uvms.commonsLibrary.version}</uvms.commons.version>
     <usm4uvms.version>${uvms.uvms4usm.version}</usm4uvms.version>
     <hibernate.version>5.1.9.Final</hibernate.version>
 
